# vite-project

./: index.html  package-lock.json  package.json  vite.config.js
public/: navigations.json
server/: server.js
server/data/: localAnimeCache.json  settings.json
server/public/data/: localAnimeCache.json  settings.json
server/routes/: anilist.route.js  animeCache.route.js  animeSuge.route.js  animesuge.route.js  cleanup.route.js  settings.route.js
server/scraper/: pyproject.toml
server/scraper/anime_suge/: getID.js  getInfo.js  getSource.js  get_ep_src.py  get_eps.py  get_info.py  get_source.py  index.js  search.js  test.py
server/scraper/utils/: killZombies.js
server/utils/: anilistQueryBuilder.util.js  filterMatches.util.js  fs.util.js
src/: App.jsx  index.css  main.jsx
src/assets/: utilities.css  webkits.css
src/components/: GenreCollection.jsx  LoadingSpinner.jsx  Navbar.jsx
src/components/badges/: EntryBadge.jsx  FavoriteBadge.jsx  FormatBadge.jsx  GradientBlueBadge.jsx  ScoreBadge.jsx  StatusBadge.jsx
src/components/banners/: CoverBanner.jsx
src/components/buttons/: ApplyChanges.jsx  BookmarkButton.jsx  FilterButton.jsx  KebabMenuButton.jsx  OutlinedButton.jsx  ShowDetailButton.jsx
src/components/cards/: ImageCard.jsx  MediaCard.jsx
src/components/carousels/: Carousel.jsx  Slider.jsx
src/components/inputs/: Searchbar.jsx  SettingsEnum.jsx
src/layouts/: CardContainer.jsx  MainLayout.jsx  SecondaryLayout.jsx
src/pages/: Anime.jsx  History.jsx  Library.jsx  Manga.jsx  NetworkError.jsx  Novel.jsx  PageNotFound.jsx
(+28 files in other folders)
